Added fuzzy search support
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/_includes/external_scripts.liquid
+++ b/_includes/external_scripts.liquid
@@ -48,3 +48,11 @@
   {% comment %} integrity="{{ site.third_party_libraries.firebase-firestore.integrity.js }}" {% endcomment %}
   crossorigin="anonymous"
 ></script>
+
+<!-- Fuse.js for fuzzy searching -->
+<script
+  defer
+  src="{{ site.third_party_libraries.fuse.url.js }}"
+  integrity="{{ site.third_party_libraries.fuse.integrity.js }}"
+  crossorigin="anonymous"
+></script>
