--- a/_includes/items_tab.liquid
+++ b/_includes/items_tab.liquid
@@ -1,4 +1,7 @@
 <div class="tab-pane fade {%- if include.tab_index == 0 %} show active{% endif %}" id="{{ include.collection }}-tab-pane" role="tabpanel" aria-labelledby="{{ include.collection }}-tab" tabindex="{{ include.tab_index }}">
+  <div class="input-group my-3" id="{{ include.collection }}-search-container">
+    <input type="search" class="form-control" id="{{ include.collection }}-search-input" placeholder="Search {{ include.collection | capitalize }}..." aria-label="Search {{ include.collection | capitalize }}">
+  </div>
   <ul class="list-group list-group-flush list-unstyled mt-3" id="{{ include.collection }}-list"></ul>
   <!-- Floating add item button -->
   <div class="fixed-action-btn" style="height: 80px;">
