--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -45,4 +45,4 @@
   crossorigin="anonymous"
 >
 
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url | bust_css_cache }}">
